--- a/config.yml
+++ b/config.yml
@@ -10,7 +10,7 @@ templates:
       settings:
         # Configure all the series options to your taste
         quality: 720p+
-        path: {? in.home ?}/Animes/{{series_name}}/Season {{series_season}}/  # This will sort your downloads if you are using one of the output plugins which supports it
+        path: /downloads/Animes/{{series_name}}/Season {{series_season}}/  # This will sort your downloads if you are using one of the output plugins which supports it
         identified_by: ep
       from:
         my_anime_list:
@@ -22,10 +22,7 @@ templates:
             - airing
             - planned
           type: tv
-schedules:
-  - tasks: '*'
-    interval:
-      minutes: 60
+          
 tasks:
   Animes:
     rss: https://nyaa.si/?page=rss&c=1_0&f=0
@@ -33,7 +30,7 @@ tasks:
 schedules:
   - tasks: Animes
     interval:
-      minutes: 30
+      minutes: 60
       
 
 # ==== Very OLD just for reference =====#
